<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <TextView
        android:id="@+id/text_state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Connection State" />
    <ScrollView
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <Button
                android:id="@+id/button_connect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_connect" />

            <TextView
                android:id="@+id/textConnectionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IPAddress: "
                />

            <EditText
                android:id="@+id/editTextIPAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:text="192.168.43.1:6624"
                />

            <Button
                android:id="@+id/button_cameraimage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_image_gallery" />
            <Button
                android:id="@+id/button_cameravideo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_video_gallery" />
            <Button
                android:id="@+id/button_downloadimage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_image_gallery" />
            <Button
                android:id="@+id/button_downloadvideo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_video_gallery" />
            <Button
                android:id="@+id/button_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_info" />
            <Button
                android:id="@+id/button_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_state" />
            <Button
                android:id="@+id/button_checkforupdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_update" />
            <Button
                android:id="@+id/button_option"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/options"
                />
            <Button
                android:id="@+id/button_takePicture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_picture"
                />

            <Button
                android:id="@+id/button_recordVideo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/recording"
                />

            <Button
                android:id="@+id/button_captureinterval"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_interval"
                />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                />

            <Button
                android:id="@+id/button_preview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

